tests/paczka1/fuzzy1/29548324.err
Error in line 1: 7jcpIa773G S598 31,3
Error in line 2: 7jcpIa773G A654 72,9
Error in line 6: 7jcpIa773G S480 88,1
Error in line 5: BWW A654 9,3
Error in line 13: S598 S598 1,0
Error in line 20: S598 S480 9i,3
Error in line 7: EyIug3tVy A654 17,2
Error in line 22: EyIug3tVy S598 96,5
Error in line 18: S598 A654 62,4
Error in line 25: BWW S598 22,1
Error in line 27: usqKf9zV A654 76,0
Error in line 38: BWW S480 56,2
